--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,7 @@
 <h1>Register</h1>
 
 <form action="/register" method="POST" >
+    <input type="text" name="id" >
     <input type="text" name="username" >
     <input type="password" name="password">
     <button>Submit</button>
