--- a/client/public/assets/styles/custom-styles.css
+++ b/client/public/assets/styles/custom-styles.css
@@ -1,18 +1,18 @@
 .menu {
-    background-color: #01344E;
+    background-color: #01344e;
 }
 
-.menu>ul>li>a:link {
+.menu > ul > li > a:link {
     display: block;
     padding: 8px;
 }
 
-.menu>ul>li>a:hover {
-    background-color: rgba(6,28,63,1);
+.menu > ul > li > a:hover {
+    background-color: rgba(6, 28, 63, 1);
 }
 
-.menu>ul>li>a:link,
-.menu>ul>li>a:visited {
+.menu > ul > li > a:link,
+.menu > ul > li > a:visited {
     color: #eee;
 }
 
